# squatsense

./: .claudeignore  .gitignore  .mcp.json  CLAUDE.md  Dockerfile  Dockerfile.backend  README.md  alembic.ini  dev-proxy.js  docker-compose.yml  package-lock.json  pyproject.toml  requirements-backend.txt  requirements.txt  run.py  vercel.json  vercel_app.py  web_app.py
.claude/commands/: deploy-check.md  new-migration.md  review.md  test-backend.md  type-check.md
.claude/rules/: backend.md  core-ml.md  frontend.md  migrations.md  schemas.md  services.md  tests.md
.claude/skills/: analyze-codebase.md  security-audit.md
.github/workflows/: deploy.yml
backend/: CLAUDE.md  config.py  deps.py  main.py  rate_limit.py
backend/ai/: coach.py
backend/core/: __init__.py  frame_metrics.py  geometry.py  pose.py  rep_detector.py  signal.py  smoothing.py
backend/db/: base.py  engine.py
backend/models/: __init__.py  analysis_job.py  drill_completion.py  league.py  refresh_token.py  rep.py  session.py  user.py  waitlist_email.py
backend/routers/: analysis.py  analytics.py  auth.py  coach.py  (+7 more)
docs/: CLOUDFLARE_TUNNEL.md  IMPLEMENTATION_3D_POSE.md
frontend/: .env.production  .gitignore  CLAUDE.md  next.config.ts  package-lock.json  package.json
scripts/: seed_demo_sessions.py  setup-cloudflare-tunnel.sh
squatsense-web/: .env.production  CLAUDE.md  next.config.ts  package-lock.json  package.json  sentry.client.config.ts  tsconfig.tsbuildinfo
src/: __init__.py  ai_coach.py  decision.py  io_stream.py  live.py  overlay.py  pose.py  reps.py
tests/: test_3d_helpers.py
(+116 files in other folders)
