[project]
name = "squatsense"
version = "0.1.0"
description = "SquatSense AI - real-time squat form analysis"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn>=0.27.0",
    "python-multipart>=0.0.9",
    "mediapipe>=0.10.0",
    "opencv-python-headless>=4.8.0",
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
    "scipy>=1.10.0",
    "websockets>=12.0",
]

[project.scripts]
# Vercel uses this entry (slim app under 250MB). Full app: uvicorn web_app:app
app = "vercel_app:app"

[tool.vercel.scripts]
build = "echo 'Build complete'"
